<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/title_import" />
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/title_gallery" />
        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/title_slideshow" />
        <item android:id="@+id/nav_item_four"
            android:title="@string/title_tools" />
        <item android:id="@+id/nav_item_five"
            android:title="@string/title_communication" />
        <item android:id="@+id/nav_item_six"
            android:title="@string/title_share" />
        <item android:id="@+id/nav_item_seven"
            android:title="@string/title_send" />
    </group>

</menu>